Update Version Info

--- a/app/src/main/res/xml/changelog.xml
+++ b/app/src/main/res/xml/changelog.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <version title="v1.0" />
-    <item text="Initial Release" />
+    <version title="v1.1" />
+    <item text="Updated Tools and UI, New Icons" />
 </resources>
