--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -74,4 +74,5 @@
     <item drawable="music_alt"/>
     <item drawable="pinterest_dym"/>
     <item drawable="magisk_manager_dym"/>
+    <item drawable="facebook_messenger_dym"/>
 </resources>
