--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -80,4 +80,6 @@
     <item drawable="minecraft"/>
     <item drawable="magisk_manager_dym"/>
     <item drawable="facebook_messenger_dym"/>
+    <item drawable="quickedit"/>
+    <item drawable="prime_video"/>
 </resources>
